@@ -16,6 +16,7 @@
 
 package com.badlogic.gdx.graphics.g3d.particles;
 
+import com.badlogic.gdx.Application;
 import com.badlogic.gdx.Application.ApplicationType;
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.graphics.Camera;
@@ -36,6 +37,7 @@ import com.badlogic.gdx.graphics.glutils.ShaderProgram;
 import com.badlogic.gdx.math.Matrix4;
 import com.badlogic.gdx.math.Vector3;
 import com.badlogic.gdx.utils.GdxRuntimeException;
+import com.badlogic.gdx.utils.PlatformUtils;
 
 /** This is a custom shader to render the particles. Usually is not required, because the {@link DefaultShader} will be used
  * instead. This shader will be used when dealing with billboards using GPU mode or point sprites.
@@ -87,17 +89,29 @@ public class ParticleShader extends BaseShader {
 	private static String defaultVertexShader = null;
 
 	public static String getDefaultVertexShader () {
-		if (defaultVertexShader == null)
-			defaultVertexShader = Gdx.files.classpath("com/badlogic/gdx/graphics/g3d/particles/particles.vertex.glsl").readString();
+		if (defaultVertexShader == null) {
+			if (Gdx.gl30 != null && PlatformUtils.isMac && Gdx.app.getType() != Application.ApplicationType.WebGL) {
+				defaultVertexShader = "#define varying out\n#define attribute in\n";
+			} else {
+				defaultVertexShader = "";
+			}
+			defaultVertexShader += Gdx.files.classpath("com/badlogic/gdx/graphics/g3d/particles/particles.vertex.glsl").readString();
+		}
 		return defaultVertexShader;
 	}
 
 	private static String defaultFragmentShader = null;
 
 	public static String getDefaultFragmentShader () {
-		if (defaultFragmentShader == null)
-			defaultFragmentShader = Gdx.files.classpath("com/badlogic/gdx/graphics/g3d/particles/particles.fragment.glsl")
+		if (defaultFragmentShader == null) {
+			if (Gdx.gl30 != null && PlatformUtils.isMac && Gdx.app.getType() != Application.ApplicationType.WebGL) {
+				defaultFragmentShader = "#define varying in\n#define texture2D texture\n#define gl_FragColor fragColor\nout vec4 fragColor;\n";
+			} else {
+				defaultFragmentShader = "";
+			}
+			defaultFragmentShader += Gdx.files.classpath("com/badlogic/gdx/graphics/g3d/particles/particles.fragment.glsl")
 				.readString();
+		}
 		return defaultFragmentShader;
 	}
 
@@ -246,8 +260,11 @@ public class ParticleShader extends BaseShader {
 
 	public static String createPrefix (final Renderable renderable, final Config config) {
 		String prefix = "";
-		if (Gdx.app.getType() == ApplicationType.Desktop)
-			prefix += "#version 120\n";
+		if (Gdx.app.getType() == ApplicationType.Desktop || Gdx.app.getType() == Application.ApplicationType.HeadlessDesktop)
+			if (Gdx.gl30 != null && PlatformUtils.isMac)
+				prefix += "#version 150\n";
+			else
+				prefix += "#version 120\n";
 		else
 			prefix += "#version 100\n";
 		if (config.type == ParticleType.Billboard) {
